refactor: add prevent default, chevron in sub menu

--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,12 @@
             class="mobile-nav__links mobile-nav__primary"
             aria-expanded="false"
           >
-            <a href="#" class="text-medium-bold">ADMISSIONS</a>
+            <a href="#" class="text-medium-bold"
+              >ADMISSIONS
+              <svg class="sprite sprite--normal" role="img">
+                <use href="/assets/img/sprite.svg#icon-chevron-down"></use>
+              </svg>
+            </a>
             <ul>
               <li class="mobile-nav__sub-links text-small-extra">
                 <a href="#">Link One</a>
@@ -201,7 +206,12 @@
             class="mobile-nav__links mobile-nav__primary"
             aria-expanded="false"
           >
-            <a href="#" class="text-medium-bold">ACADEMICS</a>
+            <a href="#" class="text-medium-bold"
+              >ACADEMICS
+              <svg class="sprite sprite--normal" role="img">
+                <use href="/assets/img/sprite.svg#icon-chevron-down"></use>
+              </svg>
+            </a>
             <ul>
               <li class="mobile-nav__sub-links text-small-extra">
                 <a href="#">Link One</a>
@@ -219,7 +229,13 @@
             class="mobile-nav__links mobile-nav__primary"
             aria-expanded="false"
           >
-            <a href="#" class="text-medium-bold">NOTICE</a>
+            <a href="#" class="text-medium-bold"
+              >NOTICE
+
+              <svg class="sprite sprite--normal" role="img">
+                <use href="/assets/img/sprite.svg#icon-chevron-down"></use>
+              </svg>
+            </a>
             <ul>
               <li class="mobile-nav__sub-links text-small-extra">
                 <a href="#">Link One</a>
@@ -237,7 +253,13 @@
             class="mobile-nav__links mobile-nav__primary"
             aria-expanded="false"
           >
-            <a href="#" class="text-medium-bold">ABOUT</a>
+            <a href="#" class="text-medium-bold"
+              >ABOUT
+
+              <svg class="sprite sprite--normal" role="img">
+                <use href="/assets/img/sprite.svg#icon-chevron-down"></use>
+              </svg>
+            </a>
             <ul>
               <li class="mobile-nav__sub-links text-small-extra">
                 <a href="#">Link One</a>
@@ -255,7 +277,13 @@
             class="mobile-nav__links mobile-nav__secondary"
             aria-expanded="false"
           >
-            <a href="#" class="text-medium-bold">Staff</a>
+            <a href="#" class="text-medium-bold"
+              >Staff
+
+              <svg class="sprite sprite--normal" role="img">
+                <use href="/assets/img/sprite.svg#icon-chevron-down"></use>
+              </svg>
+            </a>
             <ul>
               <li class="mobile-nav__sub-links text-small-extra">
                 <a href="#">Link One</a>
@@ -273,7 +301,13 @@
             class="mobile-nav__links mobile-nav__secondary"
             aria-expanded="false"
           >
-            <a href="#" class="text-medium-bold">Students</a>
+            <a href="#" class="text-medium-bold"
+              >Students
+
+              <svg class="sprite sprite--normal" role="img">
+                <use href="/assets/img/sprite.svg#icon-chevron-down"></use>
+              </svg>
+            </a>
             <ul>
               <li class="mobile-nav__sub-links text-small-extra">
                 <a href="#">Link One</a>
@@ -291,7 +325,13 @@
             class="mobile-nav__links mobile-nav__secondary"
             aria-expanded="false"
           >
-            <a href="#" class="text-medium-bold">Parents</a>
+            <a href="#" class="text-medium-bold"
+              >Parents
+
+              <svg class="sprite sprite--normal" role="img">
+                <use href="/assets/img/sprite.svg#icon-chevron-down"></use>
+              </svg>
+            </a>
             <ul>
               <li class="mobile-nav__sub-links text-small-extra">
                 <a href="#">Link One</a>
