refactor: resrtucture project dirs and fix head links

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./css/utils/global.css" />
-    <link rel="stylesheet" href="./css/utils/fonts.css" />
-    <link rel="stylesheet" href="./css/utils/variables.css" />
-    <link rel="stylesheet" href="./css/utils/animation.css" />
-    <link rel="stylesheet" href="./css/utils/search-box.css" />
+    <link rel="stylesheet" href="./css/core/fonts.css" />
+    <link rel="stylesheet" href="./css/core/variables.css" />
+    <link rel="stylesheet" href="./css/core/utils.css" />
+    <link rel="stylesheet" href="./css/core/animation.css" />
+    <link rel="stylesheet" href="./css/core/components/search-box.css" />
     <link rel="stylesheet" href="./css/components/header-type-1.css" />
     <link rel="stylesheet" href="./css/components/mobile-nav.css" />
     <link rel="stylesheet" href="./css/components/hero.css" />
