--- a/search/index.html
+++ b/search/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../public/css/utils/global.css" />
-    <link rel="stylesheet" href="../public/css/utils/variables.css" />
-    <link rel="stylesheet" href="../public/css/utils/fonts.css" />
-    <link rel="stylesheet" href="../public/css/utils/search-box.css" />
-    <link rel="stylesheet" href="../public/css/utils/breadcrumb.css" />
-    <link rel="stylesheet" href="../public/css/components/header-type-1.css" />
-    <link rel="stylesheet" href="../public/css/components/search.css" />
-    <link rel="stylesheet" href="../public/css/components/footer.css" />
+    <link rel="stylesheet" href="/public/css/core/fonts.css" />
+    <link rel="stylesheet" href="/public/css/core/variables.css" />
+    <link rel="stylesheet" href="/public/css/core/utils.css" />
+    <link rel="stylesheet" href="/public/css/core/components/search-box.css" />
+    <link rel="stylesheet" href="/public/css/core/components/breadcrumb.css" />
+    <link rel="stylesheet" href="/public/css/core/components/logo.css" />
+    <link rel="stylesheet" href="/public/css/components/header-type-1.css" />
+    <link rel="stylesheet" href="/public/css/components/search.css" />
+    <link rel="stylesheet" href="/public/css/components/footer.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Search Page</title>
   </head>
