refactor: header logo and link

--- a/about/index.html
+++ b/about/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/public/css/core/utils.css" />
     <link rel="stylesheet" href="/public/css/core/components/search-box.css" />
     <link rel="stylesheet" href="/public/css/core/components/breadcrumb.css" />
+    <link rel="stylesheet" href="/public/css/core/components/logo.css" />
     <link rel="stylesheet" href="/public/css/components/header-type-2.css" />
     <link rel="stylesheet" href="/public/css/components/search.css" />
     <link rel="stylesheet" href="/public/css/components/footer.css" />
@@ -17,12 +18,7 @@
   <body>
     <header class="header">
       <a href="../public/"
-        ><img
-          src="../assets/img/logo.png"
-          alt="logo"
-          class="logo"
-          width="100"
-          height="100"
+        ><img src="../assets/img/logo.png" alt="logo" class="logo-square"
       /></a>
       <nav class="main-nav">
         <div class="top-container">
