--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/core/utils.css" />
     <link rel="stylesheet" href="./css/core/animation.css" />
     <link rel="stylesheet" href="./css/core/components/search-box.css" />
+    <link rel="stylesheet" href="./css/core/components/logo.css" />
     <link rel="stylesheet" href="./css/components/header-type-1.css" />
     <link rel="stylesheet" href="./css/components/mobile-nav.css" />
     <link rel="stylesheet" href="./css/components/hero.css" />
@@ -27,16 +28,28 @@
     <header class="container">
       <ul class="top-section">
         <li>
-          <svg class="sprite sprite--light sprite--normal" role="img">
-            <use href="/assets/img/sprite.svg#icon-mail-o"></use>
-          </svg>
-          <a class="text-small-extra-bold" href="#">info@school.edu.in</a>
+          <a
+            class="text-small-extra-bold"
+            href="mailto:info@school.edu.in"
+            aria-label="school email address"
+          >
+            <svg class="sprite sprite--light sprite--normal" role="img">
+              <use href="/assets/img/sprite.svg#icon-mail-o"></use>
+            </svg>
+            info@school.edu.in</a
+          >
         </li>
         <li>
-          <svg class="sprite sprite--light sprite--normal" role="img">
-            <use href="/assets/img/sprite.svg#icon-phone-o"></use>
-          </svg>
-          <a class="text-small-extra-bold" href="#">+91-33-8585-8888</a>
+          <a
+            class="text-small-extra-bold"
+            href="tel:+913385858888"
+            aria-label="school telephone number"
+          >
+            <svg class="sprite sprite--light sprite--normal" role="img">
+              <use href="/assets/img/sprite.svg#icon-phone-o"></use>
+            </svg>
+            +91-33-8585-8888</a
+          >
         </li>
       </ul>
 
