--- a/admission/pages/index.html
+++ b/admission/pages/index.html
@@ -19,12 +19,7 @@
     <!-- Header -->
     <header class="header">
       <a href="/public/"
-        ><img
-          src="/assets/img/logo.png"
-          alt="logo"
-          class="logo"
-          width="100"
-          height="100"
+        ><img src="/assets/img/logo.png" alt="logo" class="logo-square"
       /></a>
       <nav class="main-nav">
         <div class="top-container">
