refactor: svg fill class and footer border color

--- a/search/index.html
+++ b/search/index.html
@@ -283,31 +283,32 @@
         </div>
       </section>
     </main>
+
     <footer class="container section footer">
-      <div class="social-media separator-gradient">
+      <div class="social-media">
         <p class="text-small-bold">CONNECT WITH US</p>
         <span>
-          <svg class="sprite sprite--medium">
+          <svg class="sprite sprite--light sprite--medium">
             <use href="/assets/img/sprite.svg#icon-whatsapp-o"></use>
           </svg>
-          <svg class="sprite sprite--medium">
+          <svg class="sprite sprite--light sprite--medium">
             <use href="/assets/img/sprite.svg#icon-youtube-o"></use>
           </svg>
-          <svg class="sprite sprite--medium">
+          <svg class="sprite sprite--light sprite--medium">
             <use href="/assets/img/sprite.svg#icon-facebook-o"></use>
           </svg>
         </span>
       </div>
 
       <section class="footer__links">
-        <div class="footer-content-wrapper separator-gradient-vertical">
+        <div class="footer-content-wrapper separator-gradient-inline">
           <img src="/assets/img/logo.png" alt="logo" class="logo__footer" />
           <h2 class="heading-2 title__footer">
             Public High School<br />
             (Higher Secondary)
           </h2>
           <div class="location-wrapper">
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-location-filled"></use>
             </svg>
             <p class="text-small">
@@ -316,10 +317,10 @@
             </p>
           </div>
         </div>
-        <div class="footer-link-container separator-gradient-vertical">
+        <div class="footer-link-container separator-gradient-inline">
           <h3 class="text-medium-bold">
             Section Header
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h3>
@@ -329,10 +330,10 @@
             <li class="text-small">Link Three</li>
           </ul>
         </div>
-        <div class="footer-link-container separator-gradient-vertical">
+        <div class="footer-link-container separator-gradient-inline">
           <h3 class="text-medium-bold">
             Section Header
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h3>
@@ -342,10 +343,10 @@
             <li class="text-small">Link Three</li>
           </ul>
         </div>
-        <div class="footer-link-container separator-gradient-vertical">
+        <div class="footer-link-container">
           <h3 class="text-medium-bold">
             Section Header
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h3>
@@ -357,7 +358,7 @@
         </div>
       </section>
 
-      <section class="footer__nav separator-gradient">
+      <section class="footer__nav separator-gradient-block">
         <p class="text-small-extra">&copy;Public High School 2024</p>
         <nav>
           <ul>
