--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
           <ul class="auxiliary-links">
             <li class="nav-links text-small">
               <a href="/admission/">ADMISSIONS</a>
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -39,7 +39,7 @@
             </li>
             <li class="nav-links text-small">
               <a href="#">ACADEMICS</a>
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -53,7 +53,7 @@
             </li>
             <li class="nav-links text-small">
               <a href="/notice/">NOTICE</a>
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -67,7 +67,7 @@
             </li>
             <li class="nav-links text-small">
               <a href="/about/">ABOUT</a>
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -82,7 +82,7 @@
           </ul>
           <form action="get" class="search-form">
             <input type="search" class="search-box" placeholder="Search..." />
-            <svg class="sprite sprite--normal" role="img">
+            <svg class="sprite sprite--light sprite--normal" role="img">
               <use href="../assets/img/sprite.svg#search"></use>
             </svg>
           </form>
@@ -97,7 +97,7 @@
           <ul class="primary-links">
             <li class="text-large">
               Link One
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -105,7 +105,7 @@
             </li>
             <li class="text-large">
               Link Two
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -113,7 +113,7 @@
             </li>
             <li class="text-large">
               Link Three
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -135,7 +135,7 @@
           </li>
           <li class="breadcrumb-link">
             <a href="#" class="text-small-extra">About</a>
-            <svg class="sprite sprite--normal" role="img">
+            <svg class="sprite sprite--dark sprite--normal" role="img">
               <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </li>
@@ -146,7 +146,7 @@
         <div class="about-main">
           <div class="title-box">
             <h1 class="heading-1">About our Public High School</h1>
-            <svg class="sprite sprite--normal" role="img">
+            <svg class="sprite sprite--dark sprite--normal" role="img">
               <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </div>
@@ -218,7 +218,7 @@
         <aside class="about-aside-bottom">
           <div>
             <h2>Section header</h2>
-            <svg class="sprite sprite--normal" role="img">
+            <svg class="sprite sprite--dark sprite--normal" role="img">
               <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
             <ul>
@@ -229,7 +229,7 @@
           </div>
           <div>
             <h2>Section header</h2>
-            <svg class="sprite sprite--normal" role="img">
+            <svg class="sprite sprite--dark sprite--normal" role="img">
               <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
             <ul>
@@ -240,7 +240,7 @@
           </div>
           <div>
             <h2>Section header</h2>
-            <svg class="sprite sprite--normal" role="img">
+            <svg class="sprite sprite--dark sprite--normal" role="img">
               <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
             <ul>
@@ -267,30 +267,30 @@
     </main>
 
     <footer class="container section footer">
-      <div class="social-media separator-gradient">
+      <div class="social-media separator-gradient-block">
         <p class="text-small-bold">CONNECT WITH US</p>
         <span>
-          <svg class="sprite sprite--medium">
+          <svg class="sprite sprite--light sprite--medium">
             <use href="/assets/img/sprite.svg#icon-whatsapp-o"></use>
           </svg>
-          <svg class="sprite sprite--medium">
+          <svg class="sprite sprite--light sprite--medium">
             <use href="/assets/img/sprite.svg#icon-youtube-o"></use>
           </svg>
-          <svg class="sprite sprite--medium">
+          <svg class="sprite sprite--light sprite--medium">
             <use href="/assets/img/sprite.svg#icon-facebook-o"></use>
           </svg>
         </span>
       </div>
 
       <section class="footer__links">
-        <div class="footer-content-wrapper separator-gradient-vertical">
+        <div class="footer-content-wrapper separator-gradient-inline">
           <img src="/assets/img/logo.png" alt="logo" class="logo__footer" />
           <h2 class="heading-2 title__footer">
             Public High School<br />
             (Higher Secondary)
           </h2>
           <div class="location-wrapper">
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-location-filled"></use>
             </svg>
             <p class="text-small">
@@ -299,10 +299,10 @@
             </p>
           </div>
         </div>
-        <div class="footer-link-container separator-gradient-vertical">
+        <div class="footer-link-container separator-gradient-inline">
           <h3 class="text-medium-bold">
             Section Header
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h3>
@@ -312,10 +312,10 @@
             <li class="text-small">Link Three</li>
           </ul>
         </div>
-        <div class="footer-link-container separator-gradient-vertical">
+        <div class="footer-link-container separator-gradient-inline">
           <h3 class="text-medium-bold">
             Section Header
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h3>
@@ -325,10 +325,10 @@
             <li class="text-small">Link Three</li>
           </ul>
         </div>
-        <div class="footer-link-container separator-gradient-vertical">
+        <div class="footer-link-container">
           <h3 class="text-medium-bold">
             Section Header
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h3>
@@ -340,7 +340,7 @@
         </div>
       </section>
 
-      <section class="footer__nav separator-gradient">
+      <section class="footer__nav separator-gradient-block">
         <p class="text-small-extra">&copy;Public High School 2024</p>
         <nav>
           <ul>
