--- a/admission/index.html
+++ b/admission/index.html
@@ -17,15 +17,15 @@
   </head>
   <body>
     <header class="header">
-      <a href="../public/"
-        ><img src="../assets/img/logo.png" alt="logo" class="logo-square"
+      <a href="/public/"
+        ><img src="/assets/img/logo.png" alt="logo" class="logo-square"
       /></a>
       <nav class="main-nav">
         <div class="top-container">
           <ul class="auxiliary-links">
             <li class="nav-links text-small">
               <a href="/admission/">ADMISSIONS</a>
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -39,7 +39,7 @@
             </li>
             <li class="nav-links text-small">
               <a href="#">ACADEMICS</a>
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -53,7 +53,7 @@
             </li>
             <li class="nav-links text-small">
               <a href="/notice/">NOTICE</a>
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -67,7 +67,7 @@
             </li>
             <li class="nav-links text-small">
               <a href="/about/">ABOUT</a>
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -82,7 +82,7 @@
           </ul>
           <form action="get" class="search-form">
             <input type="search" class="search-box" placeholder="Search..." />
-            <svg class="sprite sprite--normal" role="img">
+            <svg class="sprite sprite--light sprite--normal" role="img">
               <use href="../assets/img/sprite.svg#search"></use>
             </svg>
           </form>
@@ -97,7 +97,7 @@
           <ul class="primary-links">
             <li class="text-large">
               Link One
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -105,7 +105,7 @@
             </li>
             <li class="text-large">
               Link Two
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -113,7 +113,7 @@
             </li>
             <li class="text-large">
               Link Three
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -136,7 +136,7 @@
             </li>
             <li class="breadcrumb-link">
               <a href="#" class="text-small-extra">Admission</a>
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--dark sprite--normal" role="img">
                 <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
               </svg>
             </li>
@@ -144,7 +144,7 @@
         </nav>
         <h1 class="heading-2">
           ADMISSIONS
-          <svg class="sprite sprite--normal" role="img">
+          <svg class="sprite sprite--dark sprite--normal" role="img">
             <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
           </svg>
         </h1>
@@ -231,7 +231,7 @@
       <section class="faq">
         <h2 class="heading-2">
           Frequnetly Asked Questions
-          <svg class="sprite sprite--normal" role="img">
+          <svg class="sprite sprite--dark sprite--normal" role="img">
             <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
           </svg>
         </h2>
@@ -309,30 +309,30 @@
     </main>
 
     <footer class="container section footer">
-      <div class="social-media separator-gradient">
+      <div class="social-media separator-gradient-block">
         <p class="text-small-bold">CONNECT WITH US</p>
         <span>
-          <svg class="sprite sprite--medium">
+          <svg class="sprite sprite--light sprite--medium">
             <use href="/assets/img/sprite.svg#icon-whatsapp-o"></use>
           </svg>
-          <svg class="sprite sprite--medium">
+          <svg class="sprite sprite--light sprite--medium">
             <use href="/assets/img/sprite.svg#icon-youtube-o"></use>
           </svg>
-          <svg class="sprite sprite--medium">
+          <svg class="sprite sprite--light sprite--medium">
             <use href="/assets/img/sprite.svg#icon-facebook-o"></use>
           </svg>
         </span>
       </div>
 
       <section class="footer__links">
-        <div class="footer-content-wrapper separator-gradient-vertical">
+        <div class="footer-content-wrapper separator-gradient-inline">
           <img src="/assets/img/logo.png" alt="logo" class="logo__footer" />
           <h2 class="heading-2 title__footer">
             Public High School<br />
             (Higher Secondary)
           </h2>
           <div class="location-wrapper">
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-location-filled"></use>
             </svg>
             <p class="text-small">
@@ -341,10 +341,10 @@
             </p>
           </div>
         </div>
-        <div class="footer-link-container separator-gradient-vertical">
+        <div class="footer-link-container separator-gradient-inline">
           <h3 class="text-medium-bold">
             Section Header
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h3>
@@ -354,10 +354,10 @@
             <li class="text-small">Link Three</li>
           </ul>
         </div>
-        <div class="footer-link-container separator-gradient-vertical">
+        <div class="footer-link-container separator-gradient-inline">
           <h3 class="text-medium-bold">
             Section Header
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h3>
@@ -367,10 +367,10 @@
             <li class="text-small">Link Three</li>
           </ul>
         </div>
-        <div class="footer-link-container separator-gradient-vertical">
+        <div class="footer-link-container">
           <h3 class="text-medium-bold">
             Section Header
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h3>
@@ -382,7 +382,7 @@
         </div>
       </section>
 
-      <section class="footer__nav separator-gradient">
+      <section class="footer__nav separator-gradient-block">
         <p class="text-small-extra">&copy;Public High School 2024</p>
         <nav>
           <ul>
