--- a/notice/index.html
+++ b/notice/index.html
@@ -27,7 +27,7 @@
           <ul class="auxiliary-links">
             <li class="nav-links text-small">
               <a href="/admission/">ADMISSIONS</a>
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -41,7 +41,7 @@
             </li>
             <li class="nav-links text-small">
               <a href="#">ACADEMICS</a>
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -55,7 +55,7 @@
             </li>
             <li class="nav-links text-small">
               <a href="/notice/">NOTICE</a>
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -69,7 +69,7 @@
             </li>
             <li class="nav-links text-small">
               <a href="/about/">ABOUT</a>
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -84,7 +84,7 @@
           </ul>
           <form action="get" class="search-form">
             <input type="search" class="search-box" placeholder="Search..." />
-            <svg class="sprite sprite--normal" role="img">
+            <svg class="sprite sprite--light sprite--normal" role="img">
               <use href="../assets/img/sprite.svg#search"></use>
             </svg>
           </form>
@@ -99,7 +99,7 @@
           <ul class="primary-links">
             <li class="text-large">
               Link One
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -107,7 +107,7 @@
             </li>
             <li class="text-large">
               Link Two
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -115,7 +115,7 @@
             </li>
             <li class="text-large">
               Link Three
-              <svg class="sprite sprite--normal" role="img">
+              <svg class="sprite sprite--light sprite--normal" role="img">
                 <use
                   href="../assets/img/sprite.svg#icon-chevron-down-short"
                 ></use>
@@ -137,7 +137,7 @@
           </li>
           <li class="breadcrumb-link">
             <a href="#" class="text-small-extra">Notice</a>
-            <svg class="sprite sprite--normal" role="img">
+            <svg class="sprite sprite--dark sprite--normal" role="img">
               <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </li>
@@ -147,18 +147,18 @@
         <section class="news">
           <h2 class="heading-2">
             Featured News
-            <svg class="sprite sprite--normal" role="img">
+            <svg class="sprite sprite--dark sprite--normal" role="img">
               <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h2>
           <div class="news-wrapper">
             <button class="slider__btn slider__btn--left">
-              <svg class="sprite sprite--large">
+              <svg class="sprite sprite--light sprite--large">
                 <use href="../assets/img/sprite.svg#carousel_arrow-left"></use>
               </svg>
             </button>
             <button class="slider__btn slider__btn--right">
-              <svg class="sprite sprite--large">
+              <svg class="sprite sprite--light sprite--large">
                 <use href="../assets/img/sprite.svg#carousel_arrow-right"></use>
               </svg>
             </button>
@@ -293,7 +293,7 @@
         <section class="events-section">
           <div class="section__title">
             <h2 class="heading-2">Events</h2>
-            <svg class="sprite sprite--normal" role="img">
+            <svg class="sprite sprite--dark sprite--normal" role="img">
               <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </div>
@@ -371,7 +371,7 @@
         <section class="notice">
           <div class="section__title">
             <h2 class="heading-2">Notice</h2>
-            <svg class="sprite sprite--normal" role="img">
+            <svg class="sprite sprite--dark sprite--normal" role="img">
               <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </div>
@@ -439,30 +439,30 @@
     </main>
 
     <footer class="container section footer">
-      <div class="social-media separator-gradient">
+      <div class="social-media separator-gradient-block">
         <p class="text-small-bold">CONNECT WITH US</p>
         <span>
-          <svg class="sprite sprite--medium">
+          <svg class="sprite sprite--light sprite--medium">
             <use href="/assets/img/sprite.svg#icon-whatsapp-o"></use>
           </svg>
-          <svg class="sprite sprite--medium">
+          <svg class="sprite sprite--light sprite--medium">
             <use href="/assets/img/sprite.svg#icon-youtube-o"></use>
           </svg>
-          <svg class="sprite sprite--medium">
+          <svg class="sprite sprite--light sprite--medium">
             <use href="/assets/img/sprite.svg#icon-facebook-o"></use>
           </svg>
         </span>
       </div>
 
       <section class="footer__links">
-        <div class="footer-content-wrapper separator-gradient-vertical">
+        <div class="footer-content-wrapper separator-gradient-inline">
           <img src="/assets/img/logo.png" alt="logo" class="logo__footer" />
           <h2 class="heading-2 title__footer">
             Public High School<br />
             (Higher Secondary)
           </h2>
           <div class="location-wrapper">
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-location-filled"></use>
             </svg>
             <p class="text-small">
@@ -471,10 +471,10 @@
             </p>
           </div>
         </div>
-        <div class="footer-link-container separator-gradient-vertical">
+        <div class="footer-link-container separator-gradient-inline">
           <h3 class="text-medium-bold">
             Section Header
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h3>
@@ -484,10 +484,10 @@
             <li class="text-small">Link Three</li>
           </ul>
         </div>
-        <div class="footer-link-container separator-gradient-vertical">
+        <div class="footer-link-container separator-gradient-inline">
           <h3 class="text-medium-bold">
             Section Header
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h3>
@@ -497,10 +497,10 @@
             <li class="text-small">Link Three</li>
           </ul>
         </div>
-        <div class="footer-link-container separator-gradient-vertical">
+        <div class="footer-link-container">
           <h3 class="text-medium-bold">
             Section Header
-            <svg class="sprite sprite--normal">
+            <svg class="sprite sprite--light sprite--normal">
               <use href="/assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h3>
@@ -512,7 +512,7 @@
         </div>
       </section>
 
-      <section class="footer__nav separator-gradient">
+      <section class="footer__nav separator-gradient-block">
         <p class="text-small-extra">&copy;Public High School 2024</p>
         <nav>
           <ul>
